--- a/src/app/(routes)/globals.css
+++ b/src/app/(routes)/globals.css
@@ -2,13 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body,
+html {
+  height: 100%;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-} */
